@@ -1,0 +1,17 @@
+# Generated by Django 4.2.13 on 2024-07-04 11:34
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+    dependencies = [
+        ('persons', '0034_v2_6__fix_uuids'),
+    ]
+
+    operations = [
+        migrations.AddField(
+            model_name='address',
+            name='extra_data',
+            field=models.JSONField(default=dict, editable=False),
+        ),
+    ]
