@@ -172,6 +172,8 @@
             * Creme_config:
                 - In the class 'registry._ConfigRegistry', some methods to unregister brick classes have been added.
                 - Many portals have been reworked to store the list of displayed Brick as a class attribute.
+            * Persons:
+                - The model 'AbstractAddress' got a JSONField "meta_data" to store custom data.
             * Activities:
                 - The models 'ActivityType' & 'ActivitySubType' now inherit 'creme_core.models.MinionModel' (see <Breaking changes> part too).
                 - The upgrade of FullCalendar came with the following changes :
